tests/samples/negative/functions/lambda_capture_default_order.ax
module lambda_capture_default_order;

fn main() -> i32 {
    let base: i32 = 1;
    let add = [base, =](value: i32) -> i32 => value + base;
    return add(1);
}
